# FreeRDP

./: CMakePresets.json
client/: CMakeLists.txt
client/DRM/: CMakeLists.txt  main.cpp
